--- a/index.html
+++ b/index.html
@@ -267,27 +267,33 @@
         <th>Company</th>
         <th>Opening Date</th>
         <th>Closing Date</th>
-		<th>Status</th>
+	<th>Status</th>
       </tr>
     </thead>
     <tbody>
       <tr>
+        <td>General Insurance Corporation of India</td>
+        <td>11 Oct 2017</td>
+        <td>13 Oct 2017</td>
+	<td>Upcoming</td>
+      </tr>
+      <tr>
         <td>Indian Energy Exchange Ltd</td>
         <td>09 Oct 2017</td>
         <td>11 Oct 2017</td>
-		<td>Upcoming</td>
+	<td>Upcoming</td>
       </tr>
       <tr>
         <td>MAS Financial Services Ltd</td>
         <td>06 Oct 2017</td>
         <td>10 Oct 2017</td>
-		<td>Upcoming</td>
+	<td>Upcoming</td>
       </tr>
       <tr>
         <td>Godrej Agrovet Limited</td>
         <td>04 Oct 2017</td>
         <td>06 Oct 2017</td>
-		<td>Upcoming</td>
+	<td>Current</td>
       </tr>
     </tbody>
   </table>
@@ -313,12 +319,7 @@
 		  </tr>
 		</thead>
 		<tbody>
-		  <tr>
-			<td>SBI Life IPO</td>
-			<td>685-700</td>
-			<td>35-40</td>
-			<td>300-350</td>
-		  </tr>
+		  
 		  <tr>
 			<td>Prataap Snacks</td>
 			<td>930-938</td>
@@ -335,8 +336,20 @@
 		  <tr>
 			<td>Mas Financial</td>
 			<td>456-459</td>
-			<td>18-20</td>
+			<td>150-160</td>
+			<td>300-350</td>
+		  </tr>
+		<tr>
+			<td>Indian Engergy Exchange</td>
+			<td>1645-1650</td>
 			<td>-</td>
+			<td>300-350</td>
+		  </tr>
+		<tr>
+			<td>General Insurance</td>
+			<td>855-912</td>
+			<td>-</td>
+			<td>650-700</td>
 		  </tr>
 		</tbody>
 	  </table>
@@ -365,10 +378,6 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>02 October</td>
-        <td>Mahatama Gandhi Jayanti</td>
-      </tr>
       <tr>
         <td>19 October</td>
         <td>Diwali-Laxmi Pujan*	</td>
