--- a/index.html
+++ b/index.html
@@ -275,32 +275,21 @@
 		<td>Kaarya Facilities & Services Ltd</td>
 		<td>12 Oct 2017</td>        
 		<td>17 Oct 2017</td>
-		<td>Upcoming</td>
-	</tr>
-	<tr>
-		<td>D P Abhushan Ltd</td>
-		<td>09 Oct 2017</td>        
-		<td>11 Oct 2017</td>
 		<td>Current</td>
 	</tr>
       <tr>
-        <td>General Insurance Corporation of India</td>
-        <td>11 Oct 2017</td>
-        <td>13 Oct 2017</td>
+        <td>Reliance Nippon Life Asset Management Ltd</td>
+        <td>25 Oct 2017</td>
+        <td>27 Oct 2017</td>
 	<td>Upcoming</td>
       </tr>
       <tr>
-        <td>Indian Energy Exchange Ltd</td>
-        <td>09 Oct 2017</td>
-        <td>11 Oct 2017</td>
+        <td>Sheetal Cool Products Ltd</td>
+        <td>16 Oct 2017</td>
+        <td>18 Oct 2017</td>
 	<td>Upcoming</td>
       </tr>
-      <tr>
-        <td>MAS Financial Services Ltd</td>
-        <td>06 Oct 2017</td>
-        <td>10 Oct 2017</td>
-	<td>Current</td>
-	</tr>
+      
     </tbody>
   </table>
     </div>
