--- a/index.html
+++ b/index.html
@@ -198,6 +198,15 @@
     }
   }
   </style>
+
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108195894-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-108195894-1');
+	</script>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
@@ -271,12 +280,6 @@
       </tr>
     </thead>
     <tbody>
-	<tr>
-		<td>Kaarya Facilities & Services Ltd</td>
-		<td>12 Oct 2017</td>        
-		<td>17 Oct 2017</td>
-		<td>Current</td>
-	</tr>
       <tr>
         <td>Reliance Nippon Life Asset Management Ltd</td>
         <td>25 Oct 2017</td>
