--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@
 	<td>Upcoming</td>
       </tr>
       <tr>
-        <td>Sheetal Cool Products Ltd</td>
-        <td>16 Oct 2017</td>
-        <td>18 Oct 2017</td>
-	<td>Current</td>
+        <td>Mahindra Logistics Limited</td>
+        <td>31 Oct 2017</td>
+        <td>02 Nov 2017</td>
+	<td>Upcoming</td>
       </tr>
       
     </tbody>
@@ -317,12 +317,7 @@
 		  </tr>
 		</thead>
 		<tbody>	  
-		  <tr>
-			<td>Mas Financial</td>
-			<td>456-459</td>
-			<td>190-200</td>
-			<td>450-500</td>
-		  </tr>
+		  
 		<tr>
 			<td>Indian Engergy Exchange</td>
 			<td>1645-1650</td>
@@ -337,9 +332,15 @@
 		  </tr>
 			<tr>
 			<td>Reliance Nippon Life</td>
-			<td>247-252	</td>
+			<td>247-252</td>
 			<td>60-65</td>
 			<td>400-500</td>
+		  </tr>
+			<tr>
+			<td>Mahindra Logistics</td>
+			<td>355-363</td>
+			<td>125-130</td>
+			<td>-</td>
 		  </tr>
 		</tbody>
 	  </table>
@@ -370,14 +371,6 @@
     </thead>
     <tbody>
       <tr>
-        <td>19 October</td>
-        <td>Diwali-Laxmi Pujan*	</td>
-      </tr>
-      <tr>
-        <td>20 October</td>
-        <td>Diwali-Balipratipada</td>
-      </tr>
-	  <tr>
         <td>25 December</td>
         <td>Christmas</td>
       </tr>
