--- a/index.html
+++ b/index.html
@@ -284,8 +284,28 @@
         <td>Reliance Nippon Life Asset Management Ltd</td>
         <td>25 Oct 2017</td>
         <td>27 Oct 2017</td>
+	<td>Current</td>
+      </tr>
+	    <tr>
+        <td>HDFC Standard Life Insurance Company Ltd</td>
+        <td>07 Nov 2017</td>
+        <td>09 Nov 2017</td>
 	<td>Upcoming</td>
       </tr>
+	    <tr>
+        <td>Khadim India Limited</td>
+        <td>02 Nov 2017</td>
+        <td>06 Nov 2017</td>
+	<td>Upcoming</td>
+      </tr>
+	    
+	    <tr>
+        <td> The New India Assurance Company Limited</td>
+        <td>01 Nov 2017</td>
+        <td>03 Nov 2017</td>
+	<td>Upcoming</td>
+      </tr>
+	   
       <tr>
         <td>Mahindra Logistics Limited</td>
         <td>31 Oct 2017</td>
