--- a/index.html
+++ b/index.html
@@ -338,28 +338,29 @@
 		</thead>
 		<tbody>	  
 		  
-		<tr>
-			<td>Indian Engergy Exchange</td>
-			<td>1645-1650</td>
-			<td>10-15</td>
-			<td>300-350</td>
-		  </tr>
-		<tr>
-			<td>General Insurance</td>
-			<td>855-912</td>
-			<td>-</td>
-			<td>-</td>
-		  </tr>
+		
 			<tr>
 			<td>Reliance Nippon Life</td>
 			<td>247-252</td>
-			<td>60-65</td>
-			<td>400-500</td>
+			<td>80-85</td>
+			<td>750-800</td>
 		  </tr>
 			<tr>
 			<td>Mahindra Logistics</td>
-			<td>355-363</td>
-			<td>125-130</td>
+			<td>425-429</td>
+			<td>90-95</td>
+			<td>350-400</td>
+		  </tr>
+			<tr>
+			<td>Khadim India</td>
+			<td>745-750</td>
+			<td>-</td>
+			<td>-</td>
+		  </tr>
+			<tr>
+			<td>HDFC Standard Life</td>
+			<td>275-290</td>
+			<td>-</td>
 			<td>-</td>
 		  </tr>
 		</tbody>
