--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       <h4>Initial Public Offer (IPO), is the first sale of shares by the privately owned company to the public. The companies going public raises funds through IPO's for working capital, debt repayment, acquisitions, and a host of other uses.</h4><br>
       <p>Investor can apply for IPO Stocks by filling an IPO Application Form. These forms are usually available with stock brokers for free. Investor can also apply for IPO Stocks online through Online Stock Brokers like ICICI bank, Share Khan, and Reliance Money.<br/><br/>
 	  
-	  IPOKart.in, India's No. 1 IPO investment portal provide recent IPO information from primary stock market. IPO Tools available on this website includes IPO Ratings, IPO Grading, IPO Reviews, Grey Market Premiums of IPO's, IPO News and IPO Performance Tracker. <br/></p>
+	  IPOKart.co.in, India's No. 1 IPO investment portal provide recent IPO information from primary stock market. IPO Tools available on this website includes IPO Ratings, IPO Grading, IPO Reviews, Grey Market Premiums of IPO's, IPO News and IPO Performance Tracker. <br/></p>
       <!--<br><button class="btn btn-default btn-lg">Get in Touch</button>-->
     </div>
     <div class="col-sm-4">
