--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
 <div class="jumbotron text-center">
   <h1>IPOKart</h1> 
-  <p>IPOKart.in, India's No. 1 IPO investment portal provide recent IPO information from primary stock market. IPO Tools available on this website includes IPO Ratings, IPO Grading, IPO Reviews, Grey Market Premiums of IPO's, IPO News and IPO Performance Tracker.</p> 
+  <p>IPOKart.co.in, India's No. 1 IPO investment portal provide recent IPO information from primary stock market. IPO Tools available on this website includes IPO Ratings, IPO Grading, IPO Reviews, Grey Market Premiums of IPO's, IPO News and IPO Performance Tracker.</p> 
   <!--<form>
     <div class="input-group">
       <input type="email" class="form-control" size="50" placeholder="Email Address" required>
