--- a/index.html
+++ b/index.html
@@ -281,15 +281,15 @@
     </thead>
     <tbody>
        <tr>
-        <td>HDFC Standard Life Insurance Company Ltd</td>
-        <td>07 Nov 2017</td>
-        <td>09 Nov 2017</td>
-	<td>Current</td>
+        <td>Future Supply Chain Solutions Ltd</td>
+        <td>06 Dec 2017</td>
+        <td>08 Dec 2017</td>
+	<td>Upcoming</td>
       </tr>
-	    <tr>
-        <td>Khadim India Limited</td>
-        <td>02 Nov 2017</td>
-        <td>06 Nov 2017</td>
+	<tr>
+        <td>Shalby Limited</td>
+        <td>05 Dec 2017</td>
+        <td>07 Dec 2017</td>
 	<td>Current</td>
       </tr>      
     </tbody>
@@ -317,16 +317,16 @@
 		</thead>
 		<tbody>	  
 			<tr>
-			<td>Khadim India</td>
-			<td>745-750</td>
-			<td>-</td>
-			<td>-</td>
+			<td>Future Supply Chain Solutions Ltd</td>
+			<td>660-664</td>
+			<td>40-45</td>
+			<td>600-650</td>
 		  </tr>
 			<tr>
-			<td>HDFC Standard Life</td>
-			<td>275-290</td>
-			<td>-</td>
-			<td>-</td>
+			<td>Shalby Limited</td>
+			<td>245-248</td>
+			<td>15-20</td>
+			<td>350-400</td>
 		  </tr>
 		</tbody>
 	  </table>
