--- a/index.html
+++ b/index.html
@@ -281,16 +281,16 @@
     </thead>
     <tbody>
        <tr>
-        <td>Future Supply Chain Solutions Ltd</td>
-        <td>06 Dec 2017</td>
-        <td>08 Dec 2017</td>
+        <td>Amber Enterprises India Limited</td>
+        <td>17 Jan 2018</td>
+        <td>19 Jan 2018</td>
 	<td>Upcoming</td>
       </tr>
 	<tr>
-        <td>Shalby Limited</td>
-        <td>05 Dec 2017</td>
-        <td>07 Dec 2017</td>
-	<td>Current</td>
+        <td>Newgen Software Technologies Limited</td>
+        <td>16 Jan 2018</td>
+        <td>18 Jan 2018</td>
+	<td>Upcoming</td>
       </tr>      
     </tbody>
   </table>
@@ -317,16 +317,16 @@
 		</thead>
 		<tbody>	  
 			<tr>
-			<td>Future Supply Chain Solutions Ltd</td>
-			<td>660-664</td>
-			<td>40-45</td>
-			<td>600-650</td>
+			<td>Amber Enterprises India Limited</td>
+			<td>855-859</td>
+			<td>440-450</td>
+			<td>450-500</td>
 		  </tr>
 			<tr>
-			<td>Shalby Limited</td>
-			<td>245-248</td>
-			<td>15-20</td>
-			<td>350-400</td>
+			<td>Newgen Software Technologies Limited</td>
+			<td>240-245</td>
+			<td>30-35</td>
+			<td>200-250</td>
 		  </tr>
 		</tbody>
 	  </table>
@@ -339,8 +339,8 @@
   <div class="row">
     <div class="col-sm-4">
       
-	  <h3>Diwali 2017 Muhurat Trading: </h3> 
-	  <p>October 19, 2017 (Thursday) </p> <br/>
+	  <h3>Diwali 2018 Muhurat Trading: </h3> 
+	  <p>November 07, 2018 (Wednesday) </p> <br/>
 	<h3>Stock Market Timings: (WeekDays)</h3>
 	<p>Opening Time: 09:15 AM India Time<br/>
 	   Closing Time  : 03:30 PM India Time</p>	
