--- a/index.html
+++ b/index.html
@@ -356,10 +356,72 @@
       </tr>
     </thead>
     <tbody>
+	<tr>
+        <td>26 January</td>
+        <td>Republic Day</td>
+      </tr>
+	    <tr>
+        <td>13 February</td>
+        <td>Mahashivratri</td>
+      </tr>
+	    <tr>
+        <td>02 March</td>
+        <td>Holi</td>
+      </tr>
+	    <tr>
+        <td>29 March</td>
+        <td>Mahavir Jayanti</td>
+      </tr>
+	    <tr>
+        <td>30 March</td>
+        <td>Good Friday</td>
+      </tr>
+	    <tr>
+        <td>01 May</td>
+        <td>Maharashtra Day</td>
+      </tr>
       <tr>
+        <td>15 August</td>
+        <td>Independence Day</td>
+      </tr>
+	    <tr>
+        <td>22 August</td>
+        <td>Bakri Id</td>
+      </tr>
+	    <tr>
+        <td>13 September</td>
+        <td>Ganesh Chaturthi</td>
+      </tr>
+	    <tr>
+        <td>20 September</td>
+        <td>Muharram</td>
+      </tr>
+	    <tr>
+        <td>02 October</td>
+        <td>Mahatama Gandhi Jayanti</td>
+      </tr>
+	    <tr>
+        <td>18 October</td>
+        <td>Dussehra</td>
+      </tr>
+	    <tr>
+        <td>07 November</td>
+        <td>Diwali-Laxmi Pujan</td>
+      </tr>
+	    <tr>
+        <td>08 November</td>
+        <td>Diwali</td>
+      </tr>
+	    <tr>
+        <td>23 November</td>
+        <td>Gurunanak Jayanti</td>
+      </tr>
+	    
+	    	    <tr>
         <td>25 December</td>
         <td>Christmas</td>
       </tr>
+	    
     </tbody>
   </table>
     </div>
