--- a/index.html
+++ b/index.html
@@ -281,17 +281,11 @@
     </thead>
     <tbody>
        <tr>
-        <td>Amber Enterprises India Limited</td>
-        <td>17 Jan 2018</td>
-        <td>19 Jan 2018</td>
+        <td>Galaxy Surfactants Limited</td>
+        <td>29 Jan 2018</td>
+        <td>31 Jan 2018</td>
 	<td>Upcoming</td>
-      </tr>
-	<tr>
-        <td>Newgen Software Technologies Limited</td>
-        <td>16 Jan 2018</td>
-        <td>18 Jan 2018</td>
-	<td>Upcoming</td>
-      </tr>      
+      </tr>   
     </tbody>
   </table>
     </div>
@@ -317,17 +311,12 @@
 		</thead>
 		<tbody>	  
 			<tr>
-			<td>Amber Enterprises India Limited</td>
-			<td>855-859</td>
-			<td>440-450</td>
-			<td>450-500</td>
+			<td>Galaxy Surfactants Limited</td>
+			<td>1470-1490</td>
+			<td>510-520</td>
+			<td>500-550</td>
 		  </tr>
-			<tr>
-			<td>Newgen Software Technologies Limited</td>
-			<td>240-245</td>
-			<td>30-35</td>
-			<td>200-250</td>
-		  </tr>
+			
 		</tbody>
 	  </table>
     </div>
