--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
     </thead>
     <tbody>
        <tr>
-        <td>Galaxy Surfactants Limited</td>
-        <td>29 Jan 2018</td>
-        <td>31 Jan 2018</td>
-	<td>Upcoming</td>
+        <td>Aster DM Healthcare Ltd</td>
+        <td>12 Feb 2018</td>
+        <td>15 Feb 2018</td>
+	<td>Current</td>
       </tr>   
     </tbody>
   </table>
@@ -311,10 +311,10 @@
 		</thead>
 		<tbody>	  
 			<tr>
-			<td>Galaxy Surfactants Limited</td>
-			<td>1470-1490</td>
-			<td>510-520</td>
-			<td>500-550</td>
+			<td>Aster DM Healthcare Ltd</td>
+			<td>180-190</td>
+			<td>5-10</td>
+			<td>150-200</td>
 		  </tr>
 			
 		</tbody>
