--- a/index.html
+++ b/index.html
@@ -280,12 +280,43 @@
       </tr>
     </thead>
     <tbody>
+	    
        <tr>
-        <td>Aster DM Healthcare Ltd</td>
-        <td>12 Feb 2018</td>
-        <td>15 Feb 2018</td>
+        <td>Lemon Tree Hotels Limited</td>
+        <td>26 Mar 2018</td>
+        <td>28 Mar 2018</td>
+	<td>Upcoming</td>
+      </tr> 
+<tr>
+        <td>ICICI Securities Ltd</td>
+        <td>22 Mar 2018</td>
+        <td>26 Mar 2018</td>
+	<td>Upcoming</td>
+      </tr> 
+	    <tr>
+        <td>Mishra Dhatu Nigam Limited</td>
+        <td>21 Mar 2018</td>
+        <td>23 Mar 2018</td>
+	<td>Upcoming</td>
+      </tr> 
+	    <tr>
+        <td>Sandhar Technologies Limited</td>
+        <td>19 Mar 2018</td>
+        <td>21 Mar 2018</td>
 	<td>Current</td>
-      </tr>   
+      </tr> 
+	    <tr>
+        <td>Karda Construction Ltd</td>
+        <td>16 Mar 2018</td>
+        <td>21 Mar 2018</td>
+	<td>Current</td>
+      </tr> 
+	    <tr>
+        <td>Hindustan Aeronautics Limited</td>
+        <td>16 Mar 2018</td>
+        <td>20 Mar 2018</td>
+	<td>Current</td>
+      </tr> 
     </tbody>
   </table>
     </div>
@@ -310,12 +341,43 @@
 		  </tr>
 		</thead>
 		<tbody>	  
+			
 			<tr>
-			<td>Aster DM Healthcare Ltd</td>
-			<td>180-190</td>
-			<td>5-10</td>
+        <td>Lemon Tree Hotels Limited</td>
+        <td>54-56</td>
+			<td>-</td>
+			<td>-</td>
+      </tr> 
+<tr>
+        <td>ICICI Securities Ltd</td>
+        <td>519-520</td>
+			<td>10-15</td>
+			<td>-</td>
+      </tr> 
+	    <tr>
+        <td>Mishra Dhatu Nigam Limited</td>
+        <td>87-90</td>
+			<td>-</td>
+			<td>-</td>
+      </tr> 
+	    <tr>
+        <td>Sandhar Technologies Limited</td>
+        <td>327-332</td>
+			<td>15-20</td>
+			<td>-</td>
+      </tr> 
+	    <tr>
+        <td>Karda Construction Ltd</td>
+        <td>175-180</td>
+			<td>15-20</td>
 			<td>150-200</td>
-		  </tr>
+      </tr> 
+	    <tr>
+        <td>Hindustan Aeronautics Limited</td>
+        <td>1215-1240</td>
+			<td>5-10</td>
+			<td>-</td>
+      </tr>
 			
 		</tbody>
 	  </table>
@@ -345,18 +407,7 @@
       </tr>
     </thead>
     <tbody>
-	<tr>
-        <td>26 January</td>
-        <td>Republic Day</td>
-      </tr>
-	    <tr>
-        <td>13 February</td>
-        <td>Mahashivratri</td>
-      </tr>
-	    <tr>
-        <td>02 March</td>
-        <td>Holi</td>
-      </tr>
+	
 	    <tr>
         <td>29 March</td>
         <td>Mahavir Jayanti</td>
