--- a/lc.html
+++ b/lc.html
@@ -195,7 +195,7 @@ input[type=button]:hover {
 
 </style>
 </head>
-<body background="./img/background.jpg">
+<body background="./background.jpg">
 
 <div class="container">
   <form id="myform">
