--- a/lc.html
+++ b/lc.html
@@ -204,7 +204,7 @@ input[type=button]:hover {
         <label for="fname">He</label>
       </div>
       <div class="col-75">
-        <input type="text" id="fname" name="firstname" placeholder="He name..">
+        <input type="text" id="fname" name="firstname" placeholder="Enter name..">
       </div>
     </div>
     <div class="row">
@@ -212,7 +212,7 @@ input[type=button]:hover {
         <label for="lname">She</label>
       </div>
       <div class="col-75">
-        <input type="text" id="lname" name="lastname" placeholder="She name..">
+        <input type="text" id="lname" name="lastname" placeholder="Enter name..">
       </div>
     </div>
     
