--- a/lc.html
+++ b/lc.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="text/javascript"> 
 
 window.onload = function() {
@@ -125,6 +126,11 @@ label {
     display: inline-block;
 	color: white;
 	font-size:30px;
+}
+	
+@viewport {
+  width: device-width ;
+  zoom: 1.0 ;
 }
 
 input[type=button] {
